objects/SBQQ__PriceRule__c.object
<CustomObject>
    <customHelpPage>SBQQ__PriceRuleHelp</customHelpPage>
    <description>Rule that affects pricing for an option or quote line</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used by Data Packs to identify and update records.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBQQ__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this rule is active or not.</description>
        <inlineHelpText>Indicates whether this rule is active or not.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__AdvancedCondition__c</fullName>
        <description>Can only be entered if the Conditions Met is Custom. Enter a combination of the Price Condition Index #s, AND, OR, and parenthesis (e.g. (123 AND 124) AND 125).</description>
        <inlineHelpText>Can only be entered if the Conditions Met is Custom. Enter a combination of the Price Condition Index #s, AND, OR, and parenthesis (e.g. (123 AND 124) AND 125).</inlineHelpText>
        <label>Advanced Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConditionsMet__c</fullName>
        <description>Choose the behavior for your conditions: All is AND, Any is OR, Custom is a combination of AND/OR.</description>
        <inlineHelpText>Choose the behavior for your conditions: All is AND, Any is OR, Custom is a combination of AND/OR.</inlineHelpText>
        <label>Conditions Met</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ConfiguratorEvaluationEvent__c</fullName>
        <description>Event that specifies when Price Rules should be fired.</description>
        <inlineHelpText>When None or Save is selected, the Configurator scoped price rules will fire on save.  When Edit is selected, the Configurator scoped price rules will fire on edit and save.</inlineHelpText>
        <label>Configurator Evaluation Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Save</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__EvaluationEvent__c</fullName>
        <description>Event that causes this rule to be evaluated.</description>
        <inlineHelpText>Specify when this rule should be evaluated. Only to be used when targeting Quote Line and not supported on legacy calculator.</inlineHelpText>
        <label>Calculator Evaluation Event</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Initialization</fullName>
                </value>
                <value>
                    <fullName>Before Calculate</fullName>
                </value>
                <value>
                    <fullName>On Calculate</fullName>
                    <default>true</default>
                    <label>On Calculate</label>
                </value>
                <value>
                    <fullName>After Calculate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__EvaluationOrder__c</fullName>
        <description>Order in which this price rule is evaluated.</description>
        <inlineHelpText>Specify the order of evaluation for this price rule. Higher ordered rules are evaluated last which means they &quot;win&quot; in case of conflict.</inlineHelpText>
        <label>Evaluation Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__LookupObject__c</fullName>
        <description>API Name of the Custom Object that stores the lookup data.</description>
        <inlineHelpText>API Name of the Custom Object that stores the lookup data.</inlineHelpText>
        <label>Lookup Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SBQQ__LookupData__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optional field that makes this rule specific to the product.</description>
        <inlineHelpText>Choose a product to associate to this rule.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Price Rules</relationshipLabel>
        <relationshipName>PriceRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TargetObject__c</fullName>
        <description>Object that’s the target of the field update.</description>
        <inlineHelpText>Event during which this rule is evaluated.</inlineHelpText>
        <label>Evaluation Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Configurator</fullName>
                </value>
                <value>
                    <fullName>Calculator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Price Rule</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Price Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>